--- a/automationSolution/pom.xml
+++ b/automationSolution/pom.xml
@@ -67,9 +67,6 @@
         <version>4.4.3</version>
     </dependency>
 
-
-
-
 </dependencies>
 
 <build>
@@ -78,6 +75,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>2.5.2</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.1</version>
+            <configuration>
+                <includes>
+                    <include>**/TestRunner*.java</include>
+                </includes>
+            </configuration>
         </plugin>
     </plugins>
 </build>
